DIV-860: fixing percent wrapping on Fact Sheets in IE

--- a/edivorce/apps/core/static/css/main.scss
+++ b/edivorce/apps/core/static/css/main.scss
@@ -321,6 +321,7 @@ div.percent-suffix {
 		outline: none;
 		width: 85%;
 		text-align: right;
+		display: inline;
 	}
 	label {
 		width: 10%;
